test/trivial/deitz/integers/int8_error.good
int8_error.chpl:2: error: Cannot assign to int(8) from int(64)
