test/trivial/deitz/integers/int8_error.chpl
var i: int(8) = 127;
i = 128;
writeln(i);
